5.0.0 -> 5.1a1:
    - rse: add _rpmgi_pattern_{glob,regex} macros for "+N" arg-to-path rewrite.
    - jbj: functional "+N-V-R.A" path-to-repository expansions with -i/-U.
    - jbj: mire.c: add STANDALONE test exerciser.
    - jbj: use struct timeval timestamp for INSTALL{TID,TIME} and ORIGIN{TID,TIME}.
	Note: TID.usec field is always 0 atm.
    - rse: add new RPM macro "%{uuid:[<version>[, <ns>, <data>]]}" for generating UUIDs of version 1, 3, 4 or 5
    - rse: add new C API function rpmuuidMake() for generating UUIDs of version 1, 3, 4 or 5
    - rse: provide both ORIGINTIME (based on INSTALLTIME) and ORIGINTID (based on INSTALLTID)
    - jbj: pedantic identification of Foo (not foo) syscalls in --fsmdebug spew.
    - jbj: fix: --rollback PSM_INIT changes added fstates before initialize.
    - rse: ensure macro option parsing is done correctly also under GLIBC by not allowing option/argument permutations
    - jbj: retrieve old originTime earlier to include identical package replace.
    - jbj: fix: functional "-N-V-R.A" erasures-within-upgrade transactions.
    - jbj: fix: retrieve originTime from old, not new, header.
    - jbj: permit "-N-V-R.A" erasure args within install/upgrade transactions.
    - jbj: propagate the time a package was first installed through upgrades (available via tag "ORIGINTIME").
    - jbj: replace sr.po from translation project.
    - jbj: fix: rpmtsCheck() needs to return 1 when problems exist.
    - rse: (again) replace u_int32_t with uint32_t to be consistent across the code base
    - jbj: use RPM_OS_NTOQNX as manifest constant.
    - jbj: updated nl.po (Translation Project).
    - rpm.org: Missing space in russian translation (mdvbz#36974).
    - rpm.org: Quote find-debuginfo builddir to avoid whitespace issues.
    - jbj: generalize to verify(*) => -Va and verify(/path) => -Vf /path.
    - jbj: fix: no output performing verify(...) probe.
    - jbj: fix: insure valid exit code for verify(...) probe.