@@ -981,8 +981,9 @@ print (t)\
 
 #
 # Pattern matching for installation via "+N-V-R.A" CLI arguments
-%_rpmgi_pattern_glob()    %{_rpmdir}/%1-*-*.*.rpm
-%_rpmgi_pattern_regex()   ^.+/%1-[^-]+-[^-]+\\.[^.]+\\.rpm$
+#%_rpmgi_pattern_glob()	%{_rpmdir}/%1-*-*.*.rpm
+%_rpmgi_pattern_glob	%{_rpmdir}/*/
+%_rpmgi_pattern_regex()	^.+/%1-[^-]+-[^-]+\\.[^.]+\\.rpm$
 
 #==============================================================================
 # ---- Run-time probe dependency macros.
