@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: add rpmcliWalkFirst() to search (possibly multiple) dirs.
     - rse: add _rpmgi_pattern_{glob,regex} macros for "+N" arg-to-path rewrite.
     - jbj: functional "+N-V-R.A" path-to-repository expansions with -i/-U.
     - jbj: mire.c: add STANDALONE test exerciser.
